# W-O-Name

./: .gitignore  README.md  pyproject.toml
notebooks/: test00.ipynb
tests/: test_backbone.py  test_decoder_block.py  test_losses_seg.py  test_metrics_segmentation.py  test_training.py  test_transforms.py  test_unet_decoder.py  test_unet_encoder.py  test_unet_head.py  test_unet_model.py
tools/: train_demo.py
tools/segmentation/: polygons_to_masks.py  vis.py
woname/: __init__.py
woname.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
woname/architectures/backbones/: __init__.py  base.py  configs.py  registry.py
woname/architectures/decoders/: __init__.py  base.py  configs.py  registry.py
woname/architectures/heads/: __init__.py  base.py  configs.py  registry.py
woname/architectures/necks/: registry.py
woname/core/contracts/: batch.py
woname/core/engine/: configs.py  trainer.py
woname/core/registry/: registry.py
woname/datasets/: __init__.py  base.py  configs.py  registry.py
woname/datasets/segmentation/: segmentation_dataset.py
woname/evaluators/: __init__.py  base.py  configs.py  registry.py
woname/evaluators/segmentation/: dice_score.py  iou.py  pixel_accuracy.py
woname/layers/: conv_blocks.py  decoder_blocks.py
woname/losses/: __init__.py  base.py  configs.py  registry.py
woname/losses/segmentation/: bce.py  dice.py  dice_bce.py
woname/tasks/: base.py  segmentation.py
woname/transforms/: __init__.py  base.py  compose.py  configs.py  geometric.py  photometric.py  tensor.py
woname/vision/segmentation/: __init__.py  base.py  (+2 more)
(+6 files in other folders)
