[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "woname"
version = "0.1.0"
description = "Deep learning framework"
requires-python = ">=3.11"

dependencies = [
    "torch",
    "pydantic"
]

[tool.setuptools.packages.find]
include = ["woname*"]